fixed visibility for tbl-large vs tbl-mobile to media query for max-width: 767px

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -483,8 +483,8 @@ body {
   visibility: hidden;
 }
 
-.date-header {
-  visibility: hidden;
+.tbl-large {
+  visibility: visible;
 }
 
 @media screen and (min-width: 700px) {
